<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newItem"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="20sp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameview"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/nameofItem"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameofItem"
            android:layout_width="252dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timeview"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/time"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/time"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:inputType="time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timeview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/typeofItem"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/typeItem"
            android:layout_width="252dp"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/add_item"
        android:layout_marginStart="270dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button"/>

</LinearLayout>